--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,14 @@
 .App {
+  height:100vh;
+  width:100vw;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
+.container {
+  height: 500px;
+  width: 800px;
+  border: 1px solid red
+}
