--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,9 @@
 }
 
 .container {
-  height: 500px;
-  width: 800px;
+  height: 100%;
+  width: 100%;
+  max-height: 800px;
+  max-width: 1200px;
   border: 1px solid red
 }
