--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   width:100vw;
   text-align: center;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
