--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,65 @@
 .App {
-  height:100vh;
-  width:100vw;
-  text-align: center;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background: whitesmoke;
+  color: rgb(77, 77, 77);
+  text-align: center
+}
+
+.graph-container {
+  height: 100%;
+  width: 100%;
+  max-height: 80vh;
+  max-width: 1200px;
 }
 
 .container {
-  height: 100%;
-  width: 100%;
-  max-height: 800px;
+  width: 90%;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: white;
+  border-radius: 1rem
+}
+
+.top {
+  width: 90%;
   max-width: 1200px;
-  border: 1px solid red
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+h1,
+h2 {
+  font-weight: 500;
+  margin-right: auto
+}
+
+.select-wrapper {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.select {
+  width: 70%;
+  margin-left: 1rem;
+}
+
+small {
+  color: grey;
+  font-weight: 500;
+}
+
+.title-wrapper {
+  width: 90%;
+  text-align: left;
 }
