--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@
   justify-content: center;
   background: whitesmoke;
   color: rgb(77, 77, 77);
-  text-align: center
+  text-align: center;
+  overflow: hidden;
 }
 
 .graph-container {
@@ -34,6 +35,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0.5rem 0
 }
 
 h1,
