--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@
   justify-content: center;
   background: whitesmoke;
   color: rgb(77, 77, 77);
-  text-align: center;
   overflow: hidden;
 }
 
@@ -16,6 +15,9 @@
   width: 100%;
   max-height: 80vh;
   max-width: 1200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .container {
@@ -64,4 +66,11 @@ small {
 .title-wrapper {
   width: 90%;
   text-align: left;
+}
+
+.error {
+  font-size: 2rem;
+  margin: 0 auto;
+  color: tomato;
+  width: auto
 }
